[package]
name = "Ants-book"
version = "0.1.0"
authors = ["helloooooo <yomicerisier@gmail.com>"]

[[bin]]
name = "binary_search"
# [[bin]]
# name = "fact"
# [[bin]]
# name = "fib"
# [[bin]]
# name = "partial_sum"
# [[bin]]
# name = "lake_counting"
# [[bin]]
# name = "maze"
# [[bin]]
# name = "coin"
# [[bin]]
# name = "schedule"
# [[bin]]
# name = "bestcowline"
# [[bin]]
# name = "sarumanarmy"
# [[bin]]
# name = "fence_repair"
# [[bin]]
# name = "napsack"
# [[bin]]
# name = "insertionsort"

[dependencies]

